# healthy_dessert_recommender_system

./: .gitignore  README.md  [9th_healthy_dessert]Chap3.ipynb
bbangle_sim/: README.md  bbangle-sim-model.ipynb  example.ipynb  pyproject.toml  recommendation.ipynb  recommendation_by_Bow-1+TF-IDF.ipynb  recommendation_by_Bow-1+TF-IDF.py  recommendation_v0.1.ipynb  requirements.txt  service.py  word2vec.ipynb
bbangle_sim/configs/: service.yaml
bbangle_sim/data/: mockup_table.csv  product_board_feature.csv  stopwords.txt  w2v_result.csv
bbangle_sim/dto/: dto.py
bbangle_sim/entites/: recommendation.py
bbangle_sim/generator/: generator.py
bbangle_sim/metrics/: coverage.py
bbangle_sim/model/: base.py  bow.py  default.py  tfidf.py  word2vec.py
bbangle_sim/notebook/: example.ipynb  recommendation.ipynb  recommendation_by_Bow-1+TF-IDF.ipynb  recommendation_v0.1.ipynb  word2vec.ipynb
bbangle_sim/preprocess/: nlp.py
bbangle_sim/utils/: modelutil.py  preprocessing.py  query_service.py  validator.py
practice_code/: [9th_healthy_dessert]Chap3.ipynb  [9th_healthy_dessert]Chap4.ipynb  [9th_healthy_dessert]DeepLearning.ipynb
