[tool.poetry]
name = "bbangle-content-based-recommendation"
version = "0.1.0"
description = "유사도 기반 추천 모델 프로젝트 패키지"
authors = ["zzakjista"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2"
numpy = "^1.26.0"
scikit-learn = "1.5.2"
SQLAlchemy = "2.0.36"
PyMySQL = "1.1.1"
boto3 = "^1.35.43"
polars = "1.8.2"
python-dotenv = "^1.0.1"
line-profiler = "^4.1.3"
konlpy = "^0.6.0"
sentencepiece = "^0.2.0"
matplotlib = "^3.9.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
